[tool.poetry]
name = "repomgr"
version = "0.99.0"
description = "Simplified APT repository management"
authors = ["Jens John <dev@2ion.de>"]
license = "GPL-3+"

[tool.poetry.dependencies]
python = "^3.8"
python-debian = "^0.1.39"
click = "^7.1.2"
python-apt = { path = "vendor/python-apt" }
click-log = "^0.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pylint = "^2.7.4"
pytest = "^6.2.2"

[tool.poetry.scripts]
repo = "repomgr.cmdline:entrypoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
